fixed the process section gap and agile video height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,13 +131,15 @@ header:has(ul .services:hover, .dropdown:hover) {
   background-color: #151515;
 }
 
-.card {
+.card,
+.process-cards {
   padding: 1px;
   position: relative;
   z-index: 1;
 }
 
-.card:hover {
+.card:hover,
+.process-cards:hover {
   background: linear-gradient(
     to bottom right,
     #e6862466,
@@ -183,8 +185,60 @@ header:has(ul .services:hover, .dropdown:hover) {
     );
   border-radius: 32px;
 }
+.card:hover,
+.process-cards:hover {
+  background: linear-gradient(
+    to bottom right,
+    #e6862466,
+    transparent,
+    #e6862466
+  );
+}
+.scroll-btn:hover {
+  box-shadow: inset 0px 0px 45px 0px rgba(230, 134, 36, 0.3);
+}
+
+.process-cards:hover::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background-image:
+    linear-gradient(
+      271deg,
+      rgba(230, 134, 36, 0) 87.8%,
+      rgba(230, 134, 36, 0.19) 116.94%
+    ),
+    linear-gradient(
+      1deg,
+      rgba(230, 134, 36, 0) 88.01%,
+      rgba(230, 134, 36, 0.19) 115.85%
+    ),
+    linear-gradient(
+      91deg,
+      rgba(230, 134, 36, 0) 87.12%,
+      rgba(230, 134, 36, 0.19) 120.22%
+    ),
+    linear-gradient(
+      181deg,
+      rgba(230, 134, 36, 0) 86.43%,
+      rgba(230, 134, 36, 0.19) 120.21%
+    );
+  border-radius: 32px;
+}
 @media screen and (max-width: 768px) {
   .card:hover::before {
+    border-radius: 20px;
+  }
+}
+@media screen and (min-width: 760px) and (max-width: 960px) {
+  .process-cards:hover::before {
     border-radius: 20px;
   }
 }
@@ -192,7 +246,8 @@ header:has(ul .services:hover, .dropdown:hover) {
 .card:hover button {
   box-shadow: inset 0px 0px 45px 0px rgba(230, 134, 36, 0.3);
 }
-
+.process-cards {
+}
 .no-scrollbar {
   scrollbar-width: none;
   -webkit-overflow-scrolling: touch;
